* (bug 5510) Warning produced when using {{SUBPAGENAME}} in some namespaces
* (bug 5548) Improvements to Indonesian localisation [patch: Ivan Lanin]
* (bug 5403) Fix Special:Newpages RSS/Atom feeds
* (bug 3359) Add hooks on completion of file upload
* (bug 5184) CSS misapplied to elements in Special:Allmessages due to conflicting
  anchor identifiers

== MediaWiki 1.6.3 ==

April 10, 2006

* Fix disappearing red-linked items in the watchlist editing view
* (bug 5512) Spacing in "page has a history" deletion warning
* (bug 5508) Switch ENGINE in table statements back to TYPE; fixes regression
  where some versions of MySQL 4.0.x wouldn't work
* Added note about $wgUrlProtocols format change


== MediaWiki 1.6.2 ==

April 8, 2006

* Further improvements to Hebrew localisation
* Fix 'copyright' message for Romanian
* (bug 5476) Invalid xhtml in German localization
* (bug 5479) Id translation for preferences tabs caption
* (bug 5493) Id translation for special pages
* Additional path fixes in the updater
* (bug 5344) Fix regression that broke slashes in extension tag parameters


== MediaWiki 1.6.1 ==

April 5, 2006

Some minor issues in the 1.6.0 release have been corrected:
* (bug 5458) Fix double-URL encoding in block log link in contribs and contribs
  link in block log
* (bug 5462) Bogus missing patch warning in updater
* (bug 5461) Use of deprecated "showhideminor" in Special:Recentchangeslinked
* PHP warning when allow_call_time_pass_reference is off
* Update to Finnish localization


== MediaWiki 1.6.0 ==

April 5, 2006

MediaWiki is now using a "continuous integration" development model with
quarterly snapshot releases. The latest development code is always kept
"ready to run", and in fact runs our own sites on Wikipedia.

Release branches will continue to receive security updates for about a year
from first release, but nonessential bugfixes and feature development happen
will be made on the development trunk and appear in the next quarterly release.
