@@ -17,6 +17,8 @@ setting since version 1.2.0. If you have it on, turn it *off* if you can.
 * (bug 3359) Add hooks on completion of file upload
 * (bug 5184) CSS misapplied to elements in Special:Allmessages due to conflicting
   anchor identifiers
+* (bug 5519) Allow sidebar cache to be disabled; disable it by default.
+
 
 == MediaWiki 1.6.3 ==
 
